tests/baselines/reference/functionCall17.errors.txt
==== tests/cases/compiler/functionCall17.ts (8 errors) ====
    function foo(a:string, b?:string, c?:number, ...d:number[]){}
    foo('foo', 1); 
    ~~~
!!! error TS2082: Supplied parameters do not match any signature of call target:
!!! 	Could not apply type 'string' to argument 2 which is of type 'number'.
    ~~~
!!! error TS2087: Could not select overload for 'call' expression.
    foo('foo'); 
    foo();
    ~~~
!!! error TS2081: Supplied parameters do not match any signature of call target.
    ~~~
!!! error TS2087: Could not select overload for 'call' expression.
    foo(1, 'bar');
    ~~~
!!! error TS2082: Supplied parameters do not match any signature of call target:
!!! 	Could not apply type 'string' to argument 1 which is of type 'number'.
    ~~~
!!! error TS2087: Could not select overload for 'call' expression.
    foo('foo', 1, 3);
    ~~~
!!! error TS2082: Supplied parameters do not match any signature of call target:
!!! 	Could not apply type 'string' to argument 2 which is of type 'number'.
    ~~~
!!! error TS2087: Could not select overload for 'call' expression.
    foo('foo', 'bar', 3, 4);
    